--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,9 +1,11 @@
 name: Playwright Tests
+
 on:
   push:
     branches: [ main, master ]
   pull_request:
     branches: [ main, master ]
+
 jobs:
   test:
     timeout-minutes: 60
@@ -14,7 +16,7 @@ jobs:
       with:
         node-version: 16
     - name: Install dependencies
-      run: npm ci
+      run: npm ci --force
     - name: Install Playwright Browsers
       run: npx playwright install --with-deps
     - name: Run Playwright tests
